themes/custom/mat/sass/components/paragraphs/_paragraph--landing-page-stories.scss
// ========================================
//
// @file _paragraph--landing-page-counter.scss
// Paragraph stories element on the landing page
// ========================================

// Paragraph stories
// -----------------------------------------------------------------------------
.paragraph--type--landing-page-stories {
  display: flex;
  
  @include gradient-blue();
  color: $color-white;

  @media (min-width: $screen-sm-min) {
    min-height: 95rem;
  }

  @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
    min-height: 90rem;
  }

  .container {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-end;
    padding-bottom: 12rem;

    @media (min-width: $screen-sm-min) {
      padding-bottom: 16.5rem;
    }
  }

  .stories--content {
    @media (min-width: $screen-sm-min) {
      width: 42%;
    }

    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
      width: 52%;
    }
  }

  .field--name-field-text {
    @extend %lead-small-mobile;
  }

  .field--name-field-link {
    margin-top: 4rem;

    a {
      @include btn-primary('dark');
    }
  }

  span[class^="stories--img"] {
    position: absolute;

    @media (max-width: $screen-xs-max) {
      display: block;
    }
  }

  .stories--img1 {
    width: 12%;
    top: 36%;
    right: -1rem;

    @media (min-width: $screen-sm-min) {
      width: auto;
      top: 0;
      right: auto;
    }

    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
      width: 28%;
    }
  }

  .stories--img2 {
    width: 12%;
    left: 43%;
    bottom: -3.5rem;

    @media (min-width: $screen-sm-min) {
      width: auto;
      left: -6rem;
      bottom: -7rem;
    }
  }

  .stories--img3 {
    @media (max-width: $screen-xs-max) {
      position: relative !important;
      max-width: 78%;
      margin: 4rem auto 6rem auto;
    }

    @media (min-width: $screen-sm-min) {
      width: 65%;
      bottom: -7%;
      left: 65%;
    }

    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
      left: 58%;
    }
  }

  .stories--img4 {
    width: 28%;
    bottom: -2rem;
    right: 2.2rem;

    @media (min-width: $screen-sm-min) {
      width: auto;
      bottom: -19rem;
      right: -15%;
    }

    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
      width: 12%;
      right: -8%;
    }
  }

  .stories--img5 {
    width: 12%;
    top: 10rem;
    left: -1.2rem;

    @media (min-width: $screen-sm-min) {
      width: auto;
      top: auto;
      left: 55%;
      bottom: 30rem;
    }

    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
      bottom: 40rem;
    }
  }

  .stories--img6 {
    width: 12%;
    top: 0;
    left: 15%;

    @media (min-width: $screen-sm-min) {
      width: auto;
      top: auto;
      left: 68.5%;
      bottom: 58rem;
    }

    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
      left: 75%;
    }
  }
}

